1.16.1 (July 10, 2024)
 - Updated some transitive dependencies for vulnerability fixes.

1.16.0 (June 13, 2024)
 - Added the `getOptions` method to the `IPlatform` interface to allow the SDK to pass request options to the `fetch` function and `EventSource` constructor when fetching data from the Split servers. The method is optional and, if provided, it is called twice: first for the `fetch` options and then for the `EventSource` options. Useful for advanced use cases like configuring a proxy or validating HTTPS certificates in NodeJS.
 - Updated the Redis storage to lazily import the `ioredis` dependency when the storage is created. This prevents errors when the SDK is imported or bundled in a .mjs file, as `ioredis` is a CommonJS module.
 - Bugfixing - Restored some input validation error logs that were removed in version 1.12.0. The logs inform the user when the `getTreatment(s)` methods are called with an invalid value as feature flag name or flag set name.
 - Bugfixing - Fixed localhost mode to emit SDK_UPDATE when mocked feature flags are updated in the `features` object map of the config object (Related to issue https://github.com/splitio/javascript-browser-client/issues/119).

1.15.0 (May 13, 2024)
 - Added an optional settings validation parameter to let overwrite the default flag spec version, used by the JS Synchronizer.

1.14.0 (May 6, 2024)
 - Added support for targeting rules based on semantic versions (https://semver.org/).
 - Added special impression label "targeting rule type unsupported by sdk" when the matcher type is not supported by the SDK, which returns 'control' treatment.
 - Updated Split API client to include the flags spec version query parameter for the `splitChanges` and `auth` endpoints.

1.13.1 (January 10, 2024)
 - Updated client `destroy` method to release SDK key immediately and avoid unexpected warning logs when a factory is created with the same SDK key after the previous one was destroyed.

1.13.0 (January 4, 2024)